Fix scrollbarX appearing on < sm device

--- a/src/tailwind/input.css
+++ b/src/tailwind/input.css
@@ -33,11 +33,13 @@
 }
 
 body {
-  @apply dark:text-white text-black container dark:bg-bogoss-700 bg-bogoss-200 !max-w-none px-3 sm:px-12 overflow-x-hidden;
+  @apply dark:text-white text-black container dark:bg-bogoss-700 bg-bogoss-200 !max-w-full px-3 sm:px-12 overflow-x-hidden;
 }
 
 html {
   height: 100%;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 h1 {
