--- a/src/tailwind/output.css
+++ b/src/tailwind/output.css
@@ -1529,7 +1529,7 @@ body{
 }
 
 body{
-  max-width: none !important;
+  max-width: 100% !important;
   overflow-x: hidden;
   --tw-bg-opacity: 1;
   background-color: rgb(242 241 255 / var(--tw-bg-opacity));
@@ -1555,6 +1555,8 @@ body:is(.dark *){
 
 html {
   height: 100%;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 h1 {
